src/test/deca/codegen/valid/renduInter02/07Plus_init_int.deca
// Description:
//      Opérateur binaire plus (symbole "+")
//      => Cas spécifique avec utilisation du plus lors de l'initialisation d'une variable de type int
//
// Resultats:
//      x=11
//      y=8
//      z=-3

{
    int t = 1;
    int y = 7 + t;
    int z = 5 + -8;
    int x = y + (-z);
    println("x=", x);
    println("y=", y);
    println("z=", z);
}